[package]
name = "wmctl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.7"
